修复了404页面无法正常显示的问题（大概是解决了）

--- a/themes/ocean/source/404.html
+++ b/themes/ocean/source/404.html
@@ -1,8 +1,3 @@
----
-title: 404
-layout: false
----
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -51,7 +46,7 @@ layout: false
 <body>
 <div class="image-container">
     <img class="error-image"
-         src="/themes/ocean/source/images/404.jpg"
+         src="/source/src/img/404.jpg"
          alt="404 Page Not Found Image">
 </div>
 </body>
