尝试解决部署即出错的404页面

--- a/themes/ocean/source/404.html
+++ b/themes/ocean/source/404.html
@@ -24,10 +24,8 @@
 
         /* 图片样式：已移除边框 */
         .error-image {
-            /* 使用您指定的路径 */
             max-width: 100%;
             height: auto;
-            /* border: 2px solid #333; <-- 这一行被去掉了 */
         }
 
         /* 文本样式（可选，让用户知道如何返回） */
@@ -46,8 +44,8 @@
 <body>
 <div class="image-container">
     <img class="error-image"
-         src="/source/src/img/404.jpg"
-         alt="404 Page Not Found Image">
+         src="https://http.cat/404"
+         alt="HTTP 404 Not Found Cat">
 </div>
 </body>
 </html>
